# napari-trackastra

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_trackastra/: __init__.py  _sample_data.py  _widget.py  napari.yaml
src/napari_trackastra/_tests/: demo_widget.py  test_demo_widget.py  test_sample_data.py  test_widget.py
