[project]
name = "napari-trackastra"
dynamic = ["version"]
description = "Napari plugin for cell tracking with trackastra."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Benjamin Gallusser"},
  {email = "benjamin.gallusser@epfl.ch"},
  {name = "Martin Weigert"},
  {email = "martin.weigert@epfl.ch"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.10"
dependencies = [
    "napari",
    "numpy",
    "magicgui",
    "qtpy",
    "scikit-image",
    "trackastra",
    "napari-ctc-io",
]

[project.optional-dependencies]
testing = [
    "tox",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt",  # https://pytest-qt.readthedocs.io/en/latest/
    "pyqt5",
]

[project.entry-points."napari.manifest"]
napari-trackastra = "napari_trackastra:napari.yaml"

[project.urls]
"Bug Tracker" = "https://github.com/weigertlab/napari-trackastra/issues"
"Documentation" = "https://github.com/weigertlab/napari-trackastra#README.md"
"Source Code" = "https://github.com/weigertlab/napari-trackastra"
"User Support" = "https://github.com/weigertlab/napari-trackastra/issues"

[build-system]
requires = ["setuptools>=64","setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
write_to = "src/napari_trackastra/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]



[tool.black]
line-length = 79
target-version = ['py310']

[tool.ruff]
line-length = 79
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "F401",
    "E501", # line too long. let black handle this
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
    "SIM117", # flake8-simplify - some of merged with statements are not looking great with black, reanble after drop python 3.9
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

target-version = "py310"
fix = true
